--- a/package.json
+++ b/package.json
@@ -1,65 +1,47 @@
 {
   "name": "angular2-lite-start",
-  "version": "1.0.0",
-  "description": "Angular2 lite start package",
-  "main": "index.js",
-  "scripts": {
-    "start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\"",
-    "tsc": "tsc",
-    "tsc:w": "tsc -w",
-    "lite": "lite-server -c bs-config.json",
-    "postinstall": "typings install -AS core-js jasmine node"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/albatrosary/angular2-lite-start.git"
-  },
-  "keywords": [
-    "angular2",
-    "typescript"
-  ],
-  "author": "Fumio SAGAWA",
+  "version": "0.0.0",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/albatrosary/angular2-lite-start/issues"
+  "angular-cli": {},
+  "scripts": {
+    "start": "ng serve",
+    "lint": "tslint \"src/**/*.ts\"",
+    "test": "ng test",
+    "pree2e": "webdriver-manager update",
+    "e2e": "protractor"
   },
-  "homepage": "https://github.com/albatrosary/angular2-lite-start#readme",
+  "private": true,
   "dependencies": {
-    "@angular/common": "2.0.0-rc.4",
-    "@angular/compiler": "2.0.0-rc.4",
-    "@angular/core": "2.0.0-rc.4",
-    "@angular/forms": "0.2.0",
-    "@angular/http": "2.0.0-rc.4",
-    "@angular/platform-browser": "2.0.0-rc.4",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
-    "@angular/router": "3.0.0-beta.2",
-    "core-js": "^2.4.0",
-    "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.6",
-    "systemjs": "0.19.31",
-    "web-animations-js": "^2.2.1",
-    "zone.js": "^0.6.12"
+    "@angular/common": "2.2.3",
+    "@angular/compiler": "2.2.3",
+    "@angular/core": "2.2.3",
+    "@angular/forms": "2.2.3",
+    "@angular/http": "2.2.3",
+    "@angular/platform-browser": "2.2.3",
+    "@angular/platform-browser-dynamic": "2.2.3",
+    "@angular/router": "3.2.3",
+    "core-js": "^2.4.1",
+    "rxjs": "5.0.0-beta.12",
+    "ts-helpers": "^1.1.1",
+    "zone.js": "^0.6.23"
   },
   "devDependencies": {
-    "concurrently": "^2.0.0",
-    "lite-server": "^2.2.0",
-    "typescript": "^1.8.10",
-    "typings": "^0.8.1",
-    "watchify": "^3.7.0"
-  },
-  "jspm": {
-    "name": "angular2-lite-start",
-    "main": "angular2-lite-start.js",
-    "directories": {
-      "packages": "node_modules"
-    },
-    "configFiles": {
-      "jspm": "bin/system-config.js",
-      "jspm:dev": "jspm.dev.js",
-      "jspm:browser": "jspm.browser.js",
-      "jspm:node": "jspm.node.js"
-    },
-    "dependencies": {},
-    "devDependencies": {}
+    "@angular/compiler-cli": "2.2.3",
+    "@types/jasmine": "2.5.38",
+    "@types/node": "^6.0.42",
+    "angular-cli": "1.0.0-beta.22-1",
+    "codelyzer": "~2.0.0-beta.1",
+    "jasmine-core": "2.5.2",
+    "jasmine-spec-reporter": "2.5.0",
+    "karma": "1.2.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-cli": "^1.0.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-remap-istanbul": "^0.2.1",
+    "protractor": "4.0.9",
+    "ts-node": "1.2.1",
+    "tslint": "^4.0.2",
+    "typescript": "~2.0.3",
+    "webdriver-manager": "10.2.5"
   }
 }
